fix(style): Improve table styles, mobile spacing

--- a/static/style.css
+++ b/static/style.css
@@ -117,10 +117,16 @@ footer a {
 
 .members {
   width: 100%;
+  border-collapse: collapse;
 }
 
 .members th {
   text-align: left;
+}
+
+.members th, .members td {
+  padding: .25rem 0;
+  border-bottom: 1px solid #333;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -135,5 +141,15 @@ footer a {
 
   .hero__fire_chicken img {
     opacity: .9; /* dim white */
+  }
+
+  footer {
+    color: #aaa;
+  }
+}
+
+@media (max-width: 640px) {
+  .hero {
+    padding: .5rem 0;
   }
 }
